Test certificate regenerate on production. do it on training save 5